; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_av_realloc_f.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_av_realloc_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @av_realloc_f(i8* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call i64 @av_size_mult(i64 %10, i64 %11, i64* %8)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @av_free(i8* %15)
  store i8* null, i8** %4, align 8
  br label %28

17:                                               ; preds = %3
  %18 = load i8*, i8** %5, align 8
  %19 = load i64, i64* %8, align 8
  %20 = call i8* @av_realloc(i8* %18, i64 %19)
  store i8* %20, i8** %9, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %26, label %23

23:                                               ; preds = %17
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @av_free(i8* %24)
  br label %26

26:                                               ; preds = %23, %17
  %27 = load i8*, i8** %9, align 8
  store i8* %27, i8** %4, align 8
  br label %28

28:                                               ; preds = %26, %14
  %29 = load i8*, i8** %4, align 8
  ret i8* %29
}

declare dso_local i64 @av_size_mult(i64, i64, i64*) #1

declare dso_local i32 @av_free(i8*) #1

declare dso_local i8* @av_realloc(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
